--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,18 @@
 :root {
   /* color-scheme: light dark; */
 
+  --ui-text-color: #424242;
+
   --ui-type-size: 3rem;
   --ui-type-border-radius: 0.5rem;
 }
 
 html {
+  color: var(--ui-text-color);
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
   font-size: 8px;
   font-weight: 400;
+  line-height: 1.5;
 }
 
 body {
@@ -25,16 +28,19 @@ h1 {
   margin-bottom: 2rem;
 }
 
+p {
+  margin: 0;
+}
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
-  text-align: center;
 }
 
 /* Utility classes */
 .flex {
   display: flex;
-  vertical-align: middle;
+  align-items: center;
   gap: 0.5rem;
 }
