--- a/src/ui/UiFunction.module.css
+++ b/src/ui/UiFunction.module.css
@@ -1,8 +1,9 @@
 .uiFunction {
-  font-size: 2rem;
-  line-height: 2rem;
+  font-size: 1rem;
+  line-height: 1rem;
+  margin-bottom: 0.75rem;
 }
 
 .uiFunction p {
-  height: 2rem;
+  height: 1rem;
 }
