--- a/src/ui/UiFunction.module.css
+++ b/src/ui/UiFunction.module.css
@@ -11,12 +11,23 @@
   align-items: center;
   gap: 0.25rem;
 
-  font-size: 1rem;
-  line-height: 1rem;
+  font-size: 2rem;
+  font-weight: 200;
+  line-height: 2rem;
 }
 
 .uiParameters {
   display: flex;
   align-items: center;
   gap: 0.5rem;
+
+  margin-top: 0.375rem;
+}
+
+.uiFatArrow {
+  margin-top: 0.125rem;
+}
+
+.uiReturnType {
+  margin-top: 0.375rem;
 }
