--- a/src/ui/UiFunction.module.css
+++ b/src/ui/UiFunction.module.css
@@ -2,8 +2,6 @@
   display: flex;
   align-items: center;
   gap: 0.5rem;
-
-  margin-bottom: 0.75rem;
 }
 
 .uiParameterGroup {
@@ -30,4 +28,10 @@
 
 .uiReturnType {
   margin-top: 0.375rem;
+}
+
+.uiFunctionList {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
 }
