--- a/src/ui/UiFile.module.css
+++ b/src/ui/UiFile.module.css
@@ -1,6 +1,7 @@
 .uiFile {
   padding: 1rem;
-  border: 1px solid var(--ui-file-border-color);
+  background-color: var(--ui-file-background-color);
+  box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
   border-radius: var(--ui-file-border-radius);
   display: flex;
   flex-direction: column;
