--- a/src/ui/UiFunction.module.css
+++ b/src/ui/UiFunction.module.css
@@ -15,8 +15,8 @@
 }
 
 .uiParameters {
-  display: flex;
-  align-items: center;
+  display: grid;
+  grid-template-columns: repeat(var(--columns), 1fr);
   gap: 0.5rem;
 
   margin-top: 0.375rem;
