--- a/src/ui/UiFunction.module.css
+++ b/src/ui/UiFunction.module.css
@@ -1,37 +1,29 @@
 .uiFunction {
   display: flex;
   align-items: center;
-  gap: 0.5rem;
+  gap: 0.25rem;
 }
 
 .uiParameterGroup {
   display: flex;
   align-items: center;
   gap: 0.25rem;
-
-  font-size: 2rem;
-  font-weight: 200;
-  line-height: 2rem;
 }
 
 .uiParameters {
   display: grid;
   grid-template-columns: repeat(var(--columns), 1fr);
   gap: 0.5rem;
-
-  margin-top: 0.375rem;
 }
 
-.uiFatArrow {
-  margin-top: 0.125rem;
-}
-
-.uiReturnType {
-  margin-top: 0.375rem;
+.uiSymbol {
+  font-size: 1.5rem;
+  line-height: 1;
+  transform: translateY(-2px);
 }
 
 .uiFunctionList {
   display: flex;
   flex-direction: column;
-  gap: 0.5rem;
+  gap: 1rem;
 }
