fix: use all hues in nameToColor

--- a/src/ui/UiType.module.css
+++ b/src/ui/UiType.module.css
@@ -13,5 +13,5 @@
 .uiTypeGrid {
   display: inline-grid;
   gap: 0.5rem;
-  grid-template-columns: repeat(7, 1fr);
+  grid-template-columns: repeat(auto-fill, var(--ui-type-size));
 }
