--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,11 @@ h2 {
   margin-bottom: 2rem;
 }
 
+h3, h4, h5 {
+  font-weight: normal;
+  margin: 0;
+}
+
 p {
   font-size: 1.5rem;
   font-weight: 200;
@@ -57,6 +62,9 @@ p {
 /* Utility classes */
 .flex {
   display: flex;
-  align-items: center;
   gap: 0.25rem;
+}
+
+.flex-vcenter {
+  align-items: center;
 }
