--- a/src/App.module.css
+++ b/src/App.module.css
@@ -2,4 +2,9 @@
   display: grid;
   gap: 1rem;
   grid-template-columns: repeat(auto-fill, 296px);
+  flex-grow: 1;
+}
+
+.uiSelectedFile {
+  width: 592px;
 }
