--- a/src/ui/UiFile.module.css
+++ b/src/ui/UiFile.module.css
@@ -7,3 +7,13 @@
   flex-direction: column;
   gap: 1rem;
 }
+
+.uiFileLevel1 {
+  cursor: pointer;
+}
+
+.uiFileWrapperLevel2 {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
