--- a/src/ui/UiFile.module.css
+++ b/src/ui/UiFile.module.css
@@ -6,10 +6,15 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  border: 2px solid rgba(0, 0, 0, 0);
 }
 
 .uiFileLevel1 {
   cursor: pointer;
+}
+
+.uiFileSelected {
+  border-color: rgb(2 132 199);
 }
 
 .uiFileWrapperLevel2 {
