--- a/src/ui/UiFunction.module.css
+++ b/src/ui/UiFunction.module.css
@@ -2,6 +2,14 @@
   gap: 0.25rem;
 }
 
+.uiFunctionName {
+  font-weight: 400;
+}
+
+.uiFunctionNameMargin {
+  margin-bottom: 0.5rem;
+}
+
 .uiFunctionLevel1, .uiFunctionSameLineLevel2 {
   display: flex;
   align-items: center;
@@ -22,6 +30,10 @@
   display: grid;
   grid-template-columns: repeat(var(--columns), 1fr);
   gap: 0.5rem;
+}
+
+.uiParameterLevel2 {
+  font-weight: 300;
 }
 
 .uiSymbol {
