--- a/src/ui/UiFunction.module.css
+++ b/src/ui/UiFunction.module.css
@@ -13,6 +13,7 @@
 .uiFunctionLevel1, .uiFunctionSameLineLevel2 {
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .uiParameterGroup {
