--- a/src/App.css
+++ b/src/App.css
@@ -57,11 +57,27 @@ h4 {
   font-size: 1.25rem;
 }
 
-p {
+p, summary {
   font-size: 1.5rem;
   font-weight: 200;
-  line-height: 1;
+  line-height: 1.25;
   margin: 0;
+}
+
+summary {
+  cursor: pointer;
+}
+
+summary::marker {
+  font-size: 1rem;
+}
+
+details:hover {
+  background-color: rgba(220, 220, 220, 0.45);
+
+  > summary {
+    background-color: rgba(220, 220, 220, 0.8);
+  }
 }
 
 #root {
